python-web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web-app-service
spec:
  type: NodePort
  selector:
    app: python-web-app
    tier: python-app
  ports:
    - port: 80 # service port
      targetPort: 8000 # port of the container
      protocol: TCP
      nodePort: 30008
