python-web-app/host-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
spec:
  rules:
  - host:
    http:
      paths:
        - path:
          pathType:
          backend:
            service:
              - name:
                ports:
                  number:
