python-web-app/path-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: "/bar"
            pathType: Prefix
            backend:
              service:
                name: python-web-app-service
                port:
                  number: 80
        paths:
          - path:
            pathType:
            backend:
              service:
                - name:
                  port:
                    number:
